Fix dropdown carets not showing on desktop sizes.
CleanSlate doesn't have the ability to add the `.has-dropdown` class to the `<a>` tag, so we're referencing the anchor tag via a child selector.

--- a/scss/1-base/_wvu-nav-dropdowns.scss
+++ b/scss/1-base/_wvu-nav-dropdowns.scss
@@ -260,7 +260,7 @@
       padding: 0;
     }
   }
-  .dropdown.opened .has-dropdown {
+  .dropdown.opened > a {
     background: #9c2c12;
   }
 }
@@ -284,7 +284,7 @@
       overflow: visible;
     }
   }
-  .has-dropdown:after {
+  .dropdown > a:after {
     font-size: 1.5em;
     line-height: 0.8;
     float: right;
@@ -296,7 +296,7 @@
     border-right: 5px solid transparent;
     border-top: 5px solid #fff;
   }
-  .dropdown ul .has-dropdown:after {
+  .dropdown ul > a:after {
     content: "";
     width: 0;
     height: 0;
